another-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: another-service-service
spec:
  selector:
    app: dummy-backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9009
  type: NodePort
